<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="link_to_the_course">https://practicum.yandex.kz/profile/android-developer-plus/</string>
    <string name="support_email">sviridov_ivan@mail.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreememt_yap">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_button">Поиск</string>
    <string name="search_input_hint">Поиск</string>
    <string name="dialog_choice_title">Поделиться ссылкой на курс Android-разработчик через:</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>

    <!-- Аудиоплейер описание сверху вниз по верстке -->
    <string name="title_country_player">Страна</string>
    <string name="title_genre_player">Жанр</string>
    <string name="title_year_player">Год</string>
    <string name="title_album_player">Альбом</string>
    <string name="title_time_player">Длительность</string>
    <string name="temporary_source_track_time_mills_player">0:00</string>

    <!-- Аудиоплейер contentDescription -->
    <string name="contentDescription_arrow_back">Возврат на предыдущий экран</string>
    <string name="contentDescription_track_image">Обложка трека</string>
    <string name="contentDescription_button_add_top_pl_player">Добавить в избранные</string>
    <string name="contentDescription_button_play_player">Проиграть трек</string>
    <string name="contentDescription_button_like_player">Добавить трек в избранные</string>

    <!-- Поиск contentDescription -->
    <string name="contentDescription_clear_icon">Кнопка очистки ввода</string>
    <string name="contentDescription_place_holder">Плейсхолдер</string>

    <!-- Медиатека -->
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_is_empty">Вы не создали\n\ни одного плейлиста</string>
    <!-- Медиатека плейлеисты-->
    <string name="playlist_tracks_count_format">%1$d трек(ов)</string>

    <!-- Tabs for MediaActivity (Медиатека)-->
    <string name="tab_favourite_tracks">Избранные треки</string>
    <string name="tab_playlist">Плейлисты</string>

    <!-- Плейлисты (Медиатека)-->
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>

    <!-- ХМЛ Создание нового плейлиста -->
    <string name="new_playlist_screen_title">Новый плейлист</string>
    <string name="new_playlist_button">Создать</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_name_playlist">Название*</string>

    <!-- BottomSheet у плейера -->
    <string name="bottom_sheet_player_name">Добавить в плейлист</string>


    <!-- Диалог при создании(закрытии) Плейлиста -->
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_negative_button">Отмена</string>
    <string name="new_playlist_dialog_positive_button">Завершить</string>

    <!-- Диалог при удалении трека из Плейлиста -->
    <string name="delete_track_from_playlist_dialog_title">Хотите удалить трек?</string>
    <string name="delete_track_from_playlist_dialog_message">Вы действительно хотите удалить трек?</string>
    <string name="delete_track_from_playlist_dialog_negative_button">Нет</string>
    <string name="delete_track_from_playlist_dialog_positive_button">Да</string>

    <!-- BottomSheet для МЕНЮ -->
    <string name="playlist_menu_bottom_sheet_share">Поделиться</string>
    <string name="playlist_menu_bottom_sheet_edit_info">Редактировать информацию</string>
    <string name="playlist_menu_bottom_sheet_delete_playlist">Удалить плейлист</string>

    <!-- Диалог при удалении плейлиста из BottomSheet Menu -->
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_dialog_negative_button">Отмена</string>
    <string name="delete_playlist_dialog_positive_button">Удалить</string>

    <!-- Для EditPlaylistViewModel -->
    <string name="toast_no_playlist_edit_playlist_viewmodel">Плейлист не найден</string>
    <string name="toast_changes_saved_edit_playlist_viewmodel">Изменения сохранены</string>
    <string name="toast_mistake_saves_edit_playlist_viewmodel">Ошибка при сохранении изменений</string>

    <!-- Для EditPlaylistFragment -->
    <string name="title_edit_playlist_fragment">Редактировать</string>
    <string name="button_save_edit_playlist_fragment">Сохранить</string>

    <!-- Для PlaylistFragment common -->
    <string name="toast_data_not_loaded_playlist_fragment">Данные плейлиста еще не загружены</string>
    <string name="toast_playlist_deleted_playlist_fragment">Плейлист удален</string>
    <string name="bottom_sheet_playlist_no_tracks">Ваш плейлист пуст</string>

    <!-- Для Количества треков в плейлисте -->
    <plurals name="playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <!-- Для отображения суммы треков в плейлисте в минутах -->
    <plurals name="playlist_minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>

    <!-- Плейлист contentDescription -->
    <string name="contentDescription_playlist_share_icon">Иконка поделиться плейлистом</string>
    <string name="contentDescription_playlist_menu_icon">Иконка меню</string>
    <string name="contentDescription_playlist_dot_icon">Иконка точки</string>
    <string name="contentDescription_playlist_small_picture_icon">Иконка маленькая в меню плейлиста</string>

    <!-- Bound and ForeGround Services -->
    <string name="notification_permission_denied">Нет разрешения на запуск плейера в фоне</string>
    <string name="no_track">Отрывок отсутствует для этого трека</string>
    <string name="no_permission_for_foreground_service">Разрешение на уведомления не выдано</string>
    <string name="title_foreground_service">Playlist Maker</string>
</resources>