<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/layout_name_settings"
        android:paddingStart="@dimen/title_main_start_bottom"
        android:paddingBottom="@dimen/title_main_start_bottom"
        android:paddingTop="@dimen/title_main_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            android:padding="4sp"
            android:fontFamily="@font/ys_display_medium"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:text="@string/search"
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon_and_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_corner_main_buttons"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/button_media"
            android:text="@string/media"
            app:icon="@drawable/light_mode_2"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon_and_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_corner_main_buttons"
            android:layout_marginTop="@dimen/between_buttons"
            android:layout_marginBottom="@dimen/between_buttons"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/button_settings"
            android:text="@string/settings_button"
            app:icon="@drawable/light_mode_1"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/between_icon_and_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_corner_main_buttons"
            style="@style/ButtonStyle"/>
    </LinearLayout>

</LinearLayout>
