<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentPlaylistsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <!-- Контейнер для плейсхолдера -->
    <LinearLayout
        android:id="@+id/placeholderContainerPlaylists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/placeholderButtonPlaylists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p_h_media_playlists_button_margin_top"
            android:layout_marginBottom="@dimen/p_h_media_playlists_button_margin_bottom"
            android:background="@drawable/refresh_search_button"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/p_h_text_button_text_size_playlist"
            app:backgroundTint="@null" />

        <ImageView
            android:id="@+id/placeholderImagePlaylists"
            android:layout_width="@dimen/p_h_image_size"
            android:layout_height="@dimen/p_h_image_size"
            android:contentDescription="@string/contentDescription_place_holder"
            android:scaleType="centerInside"
            android:src="@drawable/error_nothing" />

        <TextView
            android:id="@+id/placeholderTextPlaylists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p_h_text_view_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="@dimen/p_h_text_view_padding_start_end"
            android:paddingEnd="@dimen/p_h_text_view_padding_start_end"
            android:text="@string/playlists_is_empty"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/p_h_text_view_text_size" />

    </LinearLayout>

</LinearLayout>