<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/playerBackground">
    <!-- tools:context=".MainActivity" добавь соответствующий контекст-->

    <!-- Добавил по 2 Guideline с каждой стороны, так разные отступы у объектов-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_large_player" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_small_player" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_large_player" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_small_player" />

    <ImageView
        android:id="@+id/arrow_back_to_main_player"
        android:layout_width="@dimen/back_arrow_size"
        android:layout_height="@dimen/back_arrow_size"
        android:scaleType="centerCrop"
        android:src="@drawable/light_mode_3"
        app:tint="?attr/colorOnSecondary"
        android:contentDescription="@string/contentDescription_arrow_back"
        android:layout_marginStart="@dimen/margin_arrow_player"
        android:layout_marginTop="@dimen/margin_arrow_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Проверь потом радиусы закруглений (тут 8дп) и размеры картинки-->
    <ImageView
        android:id="@+id/source_track_image_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_image_player"
        android:layout_marginBottom="@dimen/margin_bottom_image_player"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/contentDescription_track_image"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline_24dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_24dp"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back_to_main_player"
        app:layout_constraintBottom_toTopOf="@+id/source_track_name_player"/>

    <TextView
        android:id="@+id/source_track_name_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margin_bottom_source_track_name_player"
        tools:text="Song"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_source_track_name_player"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/source_artist_name_player"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_24dp"/>

    <TextView
        android:id="@+id/source_artist_name_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margin_bottom_source_artist_name_player"
        tools:text="Artist"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_source_artist_name_player"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/button_add_top_pl"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_24dp"/>

    <!-- Ниже цепь из трех ImageButton chainStyle="spread_inside" для того, чтобы крайние элементы прикреп.к Guideline-->
    <ImageButton
        android:id="@+id/button_add_top_pl"
        android:layout_width="@dimen/size_image_button_not_play_player"
        android:layout_height="@dimen/size_image_button_not_play_player"
        android:layout_marginBottom="@dimen/margin_bottom_button_add_top_pl_player"
        android:background="@null"
        app:srcCompat="@drawable/button_add_to_pl"
        android:contentDescription="@string/contentDescription_button_add_top_pl_player"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_24dp"
        app:layout_constraintBottom_toTopOf="@id/source_track_time_mills_player"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="@dimen/size_image_button_play_player"
        android:layout_height="@dimen/size_image_button_play_player"
        android:layout_marginBottom="@dimen/margin_bottom_button_button_play_player"
        android:background="@null"
        app:tint="?attr/colorOnSecondary"
        app:srcCompat="@drawable/button_play"
        android:contentDescription="@string/contentDescription_button_play_player"
        app:layout_constraintStart_toEndOf="@id/button_add_top_pl"
        app:layout_constraintBottom_toTopOf="@id/source_track_time_mills_player"
        app:layout_constraintEnd_toStartOf="@+id/button_like"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageButton
        android:id="@+id/button_like"
        android:layout_width="@dimen/size_image_button_not_play_player"
        android:layout_height="@dimen/size_image_button_not_play_player"
        android:layout_marginBottom="@dimen/margin_bottom_button_add_top_pl_player"
        android:background="@null"
        app:srcCompat="@drawable/button_like"
        android:contentDescription="@string/contentDescription_button_like_player"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline_24dp"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:layout_constraintBottom_toTopOf="@id/source_track_time_mills_player"
        app:layout_constraintHorizontal_bias="0.5" />

    <!--  Начал верстку снизу (ниже просто текст)-->

    <TextView
        android:id="@+id/title_country_player"
        app:layout_constraintTag="titleCountryPlayer"
        android:layout_marginBottom="@dimen/margin_bottom_title_country_player"
        android:text="@string/title_country_player"
        style="@style/TitlesPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16dp" />

    <TextView
        android:id="@+id/title_primaryGenreName_player"
        android:text="@string/title_genre_player"
        style="@style/TitlesPlayer"
        app:layout_constraintBottom_toTopOf="@+id/title_country_player"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16dp" />

    <TextView
        android:id="@+id/title_release_date_player"
        android:text="@string/title_year_player"
        style="@style/TitlesPlayer"
        app:layout_constraintBottom_toTopOf="@+id/title_primaryGenreName_player"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16dp" />

    <TextView
        android:id="@+id/title_collection_name_player"
        android:text="@string/title_album_player"
        style="@style/TitlesPlayer"
        app:layout_constraintBottom_toTopOf="@+id/title_release_date_player"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16dp" />

    <TextView
        android:id="@+id/title_track_time_player"
        app:layout_constraintTag="titleTrackTimePlayer"
        android:text="@string/title_time_player"
        style="@style/TitlesPlayer"
        app:layout_constraintBottom_toTopOf="@+id/source_collection_name_player"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16dp" />

    <!--  (Позиции справа - источники)-->

    <TextView
        android:id="@+id/source_country_player"
        android:layout_marginBottom="@dimen/margin_bottom_source_country_player"
        tools:text="Country"
        style="@style/SourcesPlayer"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/source_primaryGenreName_player"
        tools:text="GenreName"
        style="@style/SourcesPlayer"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/source_country_player"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/source_release_date_player"
        tools:text="releaseDate"
        style="@style/SourcesPlayer"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/source_primaryGenreName_player"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/source_collection_name_player"
        tools:text="collectionName"
        style="@style/SourcesPlayer"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/source_release_date_player"
        app:layout_constraintEnd_toStartOf="@id/right_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/source_track_time_player"
        tools:text="trackTime"
        style="@style/SourcesPlayer"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/source_collection_name_player"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16dp"
        app:layout_constraintTop_toTopOf="@id/title_track_time_player"
        app:layout_constraintStart_toStartOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/source_track_time_mills_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_source_track_time_mills_player"
        android:layout_marginBottom="@dimen/margin_bottom_source_track_time_mills_player"
        android:text="@string/temporary_source_track_time_mills_player"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_source_track_time_mills_player"
        app:layout_constraintBottom_toTopOf="@id/source_track_time_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="titleTrackTimePlayer,titleCountryPlayer"
        app:barrierDirection="end"/>

</androidx.constraintlayout.widget.ConstraintLayout>