<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Настройки + возврат -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/layout_name_settings"
        android:paddingRight="@dimen/layout_name_settings"
        android:paddingTop="@dimen/layout_name_settings"
        android:paddingBottom="@dimen/layout_name_settings">

        <ImageView
            android:id="@+id/arrow_back_to_main"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/light_mode_3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/settings_button"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>


    <!-- Выбор темной темы -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="10dp"
        android:paddingBottom="11dp"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/light_mode_4"
            android:contentDescription="@string/share_app" />
    </LinearLayout>

    <!-- Поддержка -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/light_mode_5"
            android:contentDescription="@string/support" />
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/light_mode_6"
            android:contentDescription="@string/agreement" />
    </LinearLayout>

</LinearLayout>