<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/settingsLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <!-- Настройки + возврат -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/layout_name_settings"
        android:paddingLeft="@dimen/layout_name_settings"
        android:paddingRight="@dimen/layout_name_settings"
        android:paddingTop="@dimen/layout_name_settings"
        android:paddingBottom="@dimen/layout_name_settings">

        <TextView
            android:paddingStart="@dimen/title_settings_padding_left_right_bottom"
            android:paddingEnd="@dimen/title_settings_padding_left_right_bottom"
            android:paddingTop="@dimen/title_settings_padding_top"
            android:paddingBottom="@dimen/title_settings_padding_left_right_bottom"
            android:text="@string/settings_button"
            android:textSize="@dimen/main_text_size"
            style="@style/TextViewSettingsStyle"
            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>


    <!-- Выбор темной темы -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="10dp"
        android:paddingBottom="11dp"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="Темная тема"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/thumb_color"
            app:trackTint="@color/track_color"/>
    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:id="@+id/share_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/share_app"
            style="@style/TextViewSettingsStyle"/>

        <ImageView
            android:src="@drawable/light_mode_4"
            android:contentDescription="@string/share_app"
            style="@style/ImageViewSettingsStyle"/>
    </LinearLayout>

    <!-- Поддержка -->
    <LinearLayout
        android:id="@+id/support_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/support_icon"
            android:text="@string/support"
            style="@style/TextViewSettingsStyle"/>

        <ImageView
            android:src="@drawable/light_mode_5"
            android:contentDescription="@string/support"
            style="@style/ImageViewSettingsStyle"/>
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:id="@+id/agreement_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/settings_text_view_left"
        android:paddingEnd="@dimen/settings_image_view_right"
        android:paddingTop="@dimen/settings_image_view_top"
        android:paddingBottom="@dimen/settings_image_view_bottom"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/agreement_icon"
            android:text="@string/agreement"
            style="@style/TextViewSettingsStyle"/>

        <ImageView
            android:src="@drawable/light_mode_6"
            android:contentDescription="@string/agreement"
            style="@style/ImageViewSettingsStyle"/>
    </LinearLayout>

</LinearLayout>